Refactor consultation handling in mobile app and backend services
- Improved error handling in ConsultationScreen by adding getBackendMessage utility function.
- Enhanced consultation completion logic to validate inputs and handle errors more gracefully.
- Updated queue refresh interval in DoctorQueueScreen from 5 seconds to 15 seconds for better performance.
- Implemented useRef for managing request states in DoctorQueueScreen to prevent duplicate API calls.
- Modified patient queue fetching logic in PatientQueue to use Promise.allSettled for better error handling.
- Added logging for queue status retrieval in AppointmentService to track performance.
- Introduced new endpoint in ClinicalRecordController to create and complete clinical records in one transaction.
- Refactored ClinicalRecordService to improve validation and error handling for clinical record creation.
- Added indexes to ClinicalRecord entity for optimized database queries.